--- a/frontend/src/views/Hedge/TopBar/style.module.scss
+++ b/frontend/src/views/Hedge/TopBar/style.module.scss
@@ -1,6 +1,6 @@
 @import '@/styles/variable.scss';
 
-#app #hedge #top-bar {
+.root {
     position: absolute;
     height: $title-bar-height;
     top: 0;
@@ -12,26 +12,26 @@
         left: 0;
     }
     //macOS平台的内容区域布局。主要是左侧留出红绿灯的宽度
-    &.platform-macos {
+    &.platform-mac {
         left: $macos-buttons-width;
     }
     //左侧的折叠按钮
-    > .v-collapse-button {
+    > .collapse-button {
         margin-left: 0.5rem;
         margin-top: 0.35rem;
         //折叠按钮进出的vue变换
-        &.v-collapse-button-enter-active,
-        &.v-collapse-button-leave-active {
+        &:global(.v-collapse-button-enter-active),
+        &:global(.v-collapse-button-leave-active) {
             transition: transform 0.4s ease;
         }
-        &.v-collapse-button-enter-from,
-        &.v-collapse-button-leave-to {
+        &:global(.v-collapse-button-enter-from),
+        &:global(.v-collapse-button-leave-to) {
             transform: translateX(-200%);
         }
     }
 
     //顶栏内容区域的布局定位
-    > .v-content {
+    > .content {
         position: absolute;
         top: 0;
         right: 0;
