--- a/frontend/src/views/Guide/style.module.scss
+++ b/frontend/src/views/Guide/style.module.scss
@@ -1,9 +1,9 @@
 @import '@/styles/variable.scss';
 
-#app #guide {
-    .v-guide-content {
+.root {
+    .content {
         height: 100%;
-        > .v-scroll-content {
+        > .scroll-content {
             max-height: 100%;
             overflow-y: auto;
             padding: 4rem 2rem 2rem 2rem;
@@ -11,14 +11,14 @@
     }
 }
 
-#app #guide #side-bar {
+.side-bar {
     background-color: $dark-side-background-color;
     border-right: solid 1px $dark-side-border-color;
     position: absolute;
     left: 0; top: 0; height: 100%; width: 100%;
 
     //侧边栏主要内容区域的menu
-    > .v-content {
+    > .content {
         padding: $small-title-bar-height 0.75rem 0.75rem 0.75rem;
         overflow-y: auto;
         height: 100%;
