添加进度条；修正local storage的引用bug

--- a/frontend/src/views/Init/style.module.scss
+++ b/frontend/src/views/Init/style.module.scss
@@ -11,4 +11,9 @@
             margin: 1.25rem;
         }
     }
+
+    .progress-bar {
+        width: 100px;
+        margin-top: 0.5rem;
+    }
 }
