--- a/frontend/src/styles/components/input.sass
+++ b/frontend/src/styles/components/input.sass
@@ -1,5 +1,5 @@
-@import "../variable"
 @import "../base/size"
+@import "../base/color"
 
 input
   -webkit-writing-mode: horizontal-tb !important
@@ -20,7 +20,7 @@ input
   font-size: $font-size-std
   line-height: 1.2
   padding: calc(0.5rem - 1px) calc(0.75rem - 1px)
-  border: 1px solid $border-color-side
+  border: 1px solid $dark-side-grey
   border-radius: $radius-size-std
 
   &:focus
