前端: 添加一批新的sass组件和原子类; 完成index, init, login页面的重制

--- a/frontend/src/styles/base/size.sass
+++ b/frontend/src/styles/base/size.sass
@@ -1,14 +1,22 @@
+
 /*字体大小*/
-$font-size-small: 0.625rem
-$font-size-std: 0.75rem
-$font-size-medium: 0.875rem
-$font-size-large: 1rem
+$font-size-8: 0.625rem
+$font-size-7: 0.75rem
+$font-size-6: 0.875rem
+$font-size-5: 1rem
 /*更大的、适用于标题等的字体大小*/
-$font-size-h5: 1.125rem
-$font-size-h4: 1.25rem
-$font-size-h3: 1.5rem
-$font-size-h2: 2rem
-$font-size-h1: 2.5rem
+$font-size-4: 1.125rem
+$font-size-3: 1.25rem
+$font-size-2: 1.5rem
+$font-size-1: 2rem
+
+$font-size-small: $font-size-8
+$font-size-std: $font-size-7
+$font-size-medium: $font-size-6
+$font-size-large: $font-size-5
+
+$font-size-map: ("8" $font-size-8, "7" $font-size-7, "6" $font-size-6, "5" $font-size-5, "4" $font-size-4, "3" $font-size-3, "2" $font-size-2, "1" $font-size-1)
+$font-size-name: ("small" $font-size-small, "std" $font-size-std, "medium" $font-size-medium, "large" $font-size-large)
 
 /*间隙大小*/
 $spacing-1: 0.25rem
@@ -22,11 +30,13 @@ $spacing-8: 2rem
 $spacing-10: 2.5rem
 $spacing-12: 3rem
 
+$spacing-map: ("1" $spacing-1, "2" $spacing-2, "3" $spacing-3, "4" $spacing-4, "5" $spacing-5, "6" $spacing-6, "7" $spacing-7, "8" $spacing-8, "10" $spacing-10, "12" $spacing-12)
+
 /*圆角大小*/
 $radius-size-small: 2px
 $radius-size-std: 5px
 $radius-size-large: 8px
-$radius-size-circle: 50%
+$radius-size-circle: 290486px
 
 $radius-size-map: ("small" $radius-size-small, "large" $radius-size-large, "circle" $radius-size-circle)
 
