--- a/frontend/src/styles/App.sass
+++ b/frontend/src/styles/App.sass
@@ -8,7 +8,7 @@ body
   -webkit-user-select: none
   font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif
   text-rendering: optimizeLegibility
-  font-size: $font-size-std
+  font-size: $font-size-7
   color: $font-color-std
 
 //HTML文档本身的滚动条被禁用
