--- a/frontend/src/styles/variable.sass
+++ b/frontend/src/styles/variable.sass
@@ -9,7 +9,7 @@ $font-color-std: #2c3e50
 $background-color-side: $side-grey
 $background-color-side-dark: $dark-side-grey
 /*灰色底色与白色的分界线颜色*/
-$border-color-side: #e1e1e1
+$border-color-side: #dddddd
 $border-color-side-dark: #d9d9d9
 
 /*标题栏高度*/
