--- a/frontend/src/styles/base/color.sass
+++ b/frontend/src/styles/base/color.sass
@@ -17,7 +17,7 @@ $orange: hsl(14, 100%, 53%)
 $purple: hsl(271, 100%, 71%)
 $pink: #FA7C91
 $brown: #757763
-$side-grey: #e9e9e9
+$side-grey: #efefef
 $dark-side-grey: #dedede
 
 $light-invert: findColorInvert($light)
