--- a/frontend/src/styles/base/color.sass
+++ b/frontend/src/styles/base/color.sass
@@ -18,7 +18,7 @@ $purple: hsl(271, 100%, 71%)
 $pink: #FA7C91
 $brown: #757763
 $side-grey: #efefef
-$dark-side-grey: #dedede
+$dark-side-grey: #e4e4e4
 
 $light-invert: findColorInvert($light)
 $dark-invert: findColorInvert($dark)
