前端: 完成dark mode功能; 添加dark css覆盖大部分样式; 处理web不能访问的页面

--- a/frontend/src/styles/App.sass
+++ b/frontend/src/styles/App.sass
@@ -10,6 +10,10 @@ body
   text-rendering: optimizeLegibility
   font-size: $font-size-7
   color: $font-color-std
+  background-color: $white
+  @media (prefers-color-scheme: dark)
+    color: $white
+    background-color: $dark
 
 //HTML文档本身的滚动条被禁用
 html::-webkit-scrollbar
