--- a/frontend/src/styles/components/box.sass
+++ b/frontend/src/styles/components/box.sass
@@ -1,5 +1,5 @@
 @import "../base/size"
-@import "../base/color"
+@import "../base/color.scss"
 
 $box-shadow: 0 0.5em 1em -0.125em rgba($black, 0.1), 0 0px 0 1px rgba($black, 0.02) !default
 
