--- a/frontend/src/styles/variable.sass
+++ b/frontend/src/styles/variable.sass
@@ -4,13 +4,18 @@
  */
 
 /*标准文本颜色*/
-$font-color-std: #2c3e50
+$font-color-std: $font-black
+$font-color-dark-mode: $white
 /*灰色区域底色颜色*/
-$background-color-side: $side-grey
-$background-color-side-dark: $dark-side-grey
+$background-color-side: $lightgrey
+$background-color-side-dark: $dark-lightgrey
+$background-color-side-dark-mode: $light-dark
+$background-color-side-dark-dark-mode: $more-light-dark
 /*灰色底色与白色的分界线颜色*/
 $border-color-side: #dddddd
 $border-color-side-dark: #d0d0d0
+$border-color-side-dark-mode: #4a4a4a
+$border-color-side-dark-dark-mode: #4f4f4f
 
 /*标题栏高度*/
 $title-bar-height: 40px
