--- a/frontend/src/layouts/SideLayout/style.module.scss
+++ b/frontend/src/layouts/SideLayout/style.module.scss
@@ -34,12 +34,20 @@
 
     position: absolute;
     left: 0; top: 0; height: 100%; width: 100%;
+    box-shadow: inset -0.6rem 0px 0.5rem -0.5rem rgba(128, 128, 128, 0.1);
     background-color: $background-color-side;
     border-right: solid 1px $border-color-side;
-    box-shadow: inset -0.6rem 0px 0.5rem -0.5rem rgba(128, 128, 128, 0.1);
     &.deep-color {
         background-color: $background-color-side-dark;
         border-right-color: $border-color-side-dark;
+    }
+    @media (prefers-color-scheme: dark) {
+        background-color: $background-color-side-dark-mode;
+        border-right-color: $border-color-side-dark-mode;
+        &.deep-color {
+            background-color: $background-color-side-dark-dark-mode;
+            border-right-color: $border-color-side-dark-dark-mode;
+        }
     }
     //侧边栏顶的折叠按钮
     > .collapse-button {
@@ -70,6 +78,9 @@
         white-space: nowrap;
         height: $bottom-buttons-height;
         border-top: solid 1px $border-color-side;
+        @media (prefers-color-scheme: dark) {
+            border-top-color: $border-color-side-dark-mode;
+        }
     }
 }
 
