--- a/frontend/src/styles/base/size.sass
+++ b/frontend/src/styles/base/size.sass
@@ -19,6 +19,7 @@ $font-size-map: ("8" $font-size-8, "7" $font-size-7, "6" $font-size-6, "5" $font
 $font-size-name: ("small" $font-size-small, "std" $font-size-std, "medium" $font-size-medium, "large" $font-size-large)
 
 /*间隙大小*/
+$spacing-0: 0
 $spacing-1: 0.25rem
 $spacing-2: 0.5rem
 $spacing-3: 0.75rem
@@ -30,7 +31,7 @@ $spacing-8: 2rem
 $spacing-10: 2.5rem
 $spacing-12: 3rem
 
-$spacing-map: ("1" $spacing-1, "2" $spacing-2, "3" $spacing-3, "4" $spacing-4, "5" $spacing-5, "6" $spacing-6, "7" $spacing-7, "8" $spacing-8, "10" $spacing-10, "12" $spacing-12)
+$spacing-map: ("0" $spacing-0, "1" $spacing-1, "2" $spacing-2, "3" $spacing-3, "4" $spacing-4, "5" $spacing-5, "6" $spacing-6, "7" $spacing-7, "8" $spacing-8, "10" $spacing-10, "12" $spacing-12)
 
 /*圆角大小*/
 $radius-size-small: 3px
