--- a/frontend/src/views/Setting/Channel/style.module.scss
+++ b/frontend/src/views/Setting/Channel/style.module.scss
@@ -5,7 +5,7 @@
         >:global(.block) {
             padding: 0.5rem 0.75rem;
             margin-bottom: 0.5rem;
-            width: 400px;
+            width: 20rem;
             cursor: pointer;
         }
     }
