前端: 根据ipc接口的重构重新设计基础构建结构

--- a/frontend/src/styles/base/color.scss
+++ b/frontend/src/styles/base/color.scss
@@ -69,7 +69,7 @@ $colors: (
         "black" ($black, $white),
         "font-black" ($font-black, $font-black-invert),
         "grey" ($grey, $grey-invert),
-        "light" ($more-dark, $light),
+        "light" ($light, $more-dark),
         "dark" ($dark, $dark-invert),
         "lightgrey" ($lightgrey, $side-grey-invert),
         "dark-lightgrey" ($dark-lightgrey, $dark-side-grey-invert),
@@ -89,7 +89,7 @@ $colors-dark-mode: (
         "black" ($white, $black),
         "font-black" ($white, $light),
         "grey" ($grey, $grey-invert),
-        "light" ($light-invert, $light),
+        "light" ($more-dark, $light),
         "dark" ($dark-invert, $dark),
         "lightgrey" ($light-dark, $white),
         "dark-lightgrey" ($more-light-dark, $white),
