客户端: 测试完整初始化和装配过程，修复启动过程的问题，标记几处前端样式的Bug Fix

--- a/frontend/src/styles/components/box.sass
+++ b/frontend/src/styles/components/box.sass
@@ -8,3 +8,4 @@ $box-shadow: 0 0.5em 1em -0.125em rgba($black, 0.1), 0 0px 0 1px rgba($black, 0.
   box-shadow: $box-shadow
   display: block
   padding: 1.25rem
+  //TODO dark mode下的阴影太难看清，需要反色
