前端: 完成setting meta/query页面; 更改input默认字体并添加宽度选择项

--- a/frontend/src/styles/App.sass
+++ b/frontend/src/styles/App.sass
@@ -1,4 +1,5 @@
 @import 'base/size'
+@import 'base/font'
 @import 'variable'
 
 //body基本样式
@@ -6,7 +7,7 @@ body
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
   -webkit-user-select: none
-  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif
+  font-family: $family-std
   text-rendering: optimizeLegibility
   font-size: $font-size-7
   color: $font-color-std
