--- a/frontend/src/styles/components/generic.sass
+++ b/frontend/src/styles/components/generic.sass
@@ -1,4 +1,5 @@
 @import "../base/size"
+@import "../base/font"
 @import "../base/color.scss"
 @import "../base/functions"
 
@@ -16,6 +17,7 @@ code
   font-weight: normal
   padding-right: 0.25em
   padding-left: 0.25em
+  font-family: $family-monospace
 
 span
   font-style: inherit
