前端: 基本完成setting origin页面的site列表

--- a/frontend/src/styles/components/block.sass
+++ b/frontend/src/styles/components/block.sass
@@ -6,6 +6,7 @@
   padding: 1.25rem 2rem 1.25rem 1rem
   border-radius: $radius-size-std
   position: relative
+  box-sizing: border-box
   background-color: $light
   color: $font-black
   @media (prefers-color-scheme: dark)
