--- a/frontend/src/styles/components/form.sass
+++ b/frontend/src/styles/components/form.sass
@@ -34,7 +34,10 @@
     cursor: pointer
     vertical-align: bottom
     margin: 0 0.25em 0.05em 0
-
+  &.disabled
+    cursor: default
+    input[type=checkbox]
+      cursor: default
 .select
   display: inline-block
   position: relative
