--- a/frontend/src/styles/components/group.sass
+++ b/frontend/src/styles/components/group.sass
@@ -5,5 +5,6 @@
   > button,
   > a
     margin-bottom: $spacing-1
-    margin-right: $spacing-2
     display: inline-block
+    &:not(:last-child)
+      margin-right: $spacing-2
