--- a/frontend/src/styles/components/input.sass
+++ b/frontend/src/styles/components/input.sass
@@ -30,7 +30,7 @@ input
     border-color: $more-light-dark
 
   $input-size-map: ("small" ($font-size-8, $height-small), "medium" ($font-size-6, $height-medium))
-  $input-width-map: ("half" 0.5em, "small" 0.75em, "std" 1em, "medium" 1.25em, "large" 1.5em, "2x" 2em, "3x" 3em)
+  $input-width-map: ("one-third" 0.333em, "half" 0.5em, "small" 0.75em, "std" 1em, "medium" 1.25em, "large" 1.5em, "2x" 2em, "3x" 3em)
 
   &:focus
     box-shadow: 0 0 3px $dark-lightgrey
