--- a/frontend/src/styles/utils/layout.sass
+++ b/frontend/src/styles/utils/layout.sass
@@ -43,6 +43,11 @@
 .h-100
     height: 100%
 
+.float-right
+    float: right
+.float-left
+    float: left
+
 @each $name, $size in $spacing-map
     .m-#{$name}
         margin: $size
